ingress/ingress-ssl/daemonset.yaml

---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress
spec:
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress
        name: traefik-ingress
    spec:
      terminationGracePeriodSeconds: 60
      restartPolicy: Always
#      serviceAccountName: ingress
      serviceAccountName: traefik-ingress-controller
      containers:
      - image: traefik:v1.5.4-alpine
        name: traefik-ingress
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        - name: https
          containerPort: 443
          hostPort: 443
        - name: admin
          containerPort: 8580
        args:
        - --configFile=/etc/traefik/traefik.toml
#        - -d
        - --web
        - --kubernetes
        - --web.address=:8580
        - --web.metrics
        - --web.metrics.prometheus
        - --accesslog
        - --accesslog.filepath=/var/log/traefik_access.log
        - --accesslog.format=json
#        - --api
        - --loglevel="INFO"
        volumeMounts:
        - name: traefik-config-volume
          mountPath: /etc/traefik
        - name: traefik-ssl-volume
          mountPath: /ssl
        - name: access-log
          mountPath: /var/log

      volumes:
      - name: traefik-config-volume
        configMap:
          name: traefik-conf
          items:
          - key: traefik-config
            path: traefik.toml
      - name: traefik-ssl-volume
        secret:
          secretName: traefik-ssl
      - name: access-log
        emptyDir: {}
